libchewing (0.3.3-1) unstable; urgency=low

  * New upstream release
  * Change debhelper compatibility to 9

 -- Kan-Ru Chen <koster@debian.org>  Wed, 24 Aug 2011 22:38:33 +0800

libchewing (0.3.2-1) unstable; urgency=low

  * New Upstream Version 
  * [5d96bf5] Update watch address
  * [351d417] Add Vcs-Git field
  * [63cd26a] Add Vcs-Browser field
  * [e2a59e2] Conflict with scim-chewing << 0.3.3
  * [cd15be8] Change libchewing3-data from all to any since we build
    binary data now.

 -- Kanru Chen <koster@debian.org.tw>  Thu, 04 Dec 2008 15:34:03 +0800

libchewing (0.3.1-1) unstable; urgency=low

  * New Upstream Version
  * Update standards-version to 3.8.0
  * Add Homepage header
  * Add Priority to all binary package field
  * Add Andrew Lee <andrew@linux.org.tw> to Uploaders
  * Change debhelper compatibility to 7
  * Simplify debian/rules
  * Conflict with scim-chewing (<< 0.3.2)
  * Now build libchewing3-data in binary-indep (Closes: #303000)
  * Closes: #427974: cannot type any zuo words. Fixed upstream.

 -- Kanru Chen <koster@debian.org.tw>  Wed, 12 Nov 2008 16:48:32 +0800

libchewing (0.3.0-1) unstable; urgency=low

  * New upstream release
  * Bump major version to 3
  * Change debhelper compatibility to 5
  * Update standards-version to 3.7.2.0
  * Not install *.la files anymore.
  * Install -data files to libchewing3/chewing instead of chewing
    to maintain the compatibility of old -data packages
  * Update README.Debian
  * Change libchewing3-data architecture to any (Closes: #303000)

 -- Kanru Chen <koster@debian.org.tw>  Mon, 15 May 2006 16:17:40 +0800

libchewing (0.2.7-1) unstable; urgency=low

  * New upstream release.
  * New standards version (3.6.2, no changes).

 -- Kanru Chen <koster@debian.org.tw>  Tue, 16 Aug 2005 14:46:14 +0800

libchewing (0.2.6+svn20050326-1) unstable; urgency=high

  * Upstream SVN snapshot.
    + Using snapshot which fixed some unexpected exit() call.
  * Change libcheiwng2-dev section to 'libdevel'.